Document use of unbase_oci